[package]
authors = ["Walfie <walfington@gmail.com>"]
name = "petronel"
version = "0.1.0"

[dependencies]
chrono = "0.4"
error-chain = "0.10"
futures = "0.1"
hyper = "0.11"
lazy_static = "0.2"
regex = "0.2"
serde = "1.0"
serde_derive = "1.0"
string_cache = "0.6"
tokio-core = "0.1"
twitter-stream = "^0.5.3"

[dev-dependencies]
percent-encoding = "1.0"
serde_json = "1.0"
